make sure language options use ellipsis if too long for container

--- a/themes/bdev/assets/sass/components/_header.scss
+++ b/themes/bdev/assets/sass/components/_header.scss
@@ -338,6 +338,9 @@
         color: var(--dark);
         font-weight: normal;
         transition: background-color 200ms, color 200ms;
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
 
         &:hover {
           background-color: var(--accent);
